--- a/EditoresDeTexto/src/app/home/home.component.html
+++ b/EditoresDeTexto/src/app/home/home.component.html
@@ -3,13 +3,13 @@
 </ngx-spinner>
 
 <section class="ss-style-triangles">
-  <div>
+  <!-- <div>
     <button type="button" class="btn btn-success" (click)="Sin_editor()" [disabled]="isEnabled">
       Sin editor de texto&nbsp;<i class="fa fa-ban fa-lg" aria-hidden="true"></i></button>
-  </div>
+  </div> -->
 </section>
 
-<div class="container" *ngIf="sin_editor">
+<div class="container" *ngIf="true">
   <div class="form-group">
     <textarea class="form-control" id="Textarea1" rows="1" style="resize: none;"
       [(ngModel)]="escritoTexto_Titulo"></textarea>
