--- a/EditoresDeTexto/src/app/editor-ngx-editor/editor-ngx-editor.component.html
+++ b/EditoresDeTexto/src/app/editor-ngx-editor/editor-ngx-editor.component.html
@@ -9,21 +9,26 @@
   </div> -->
 
   <div>
-    <button type="button" class="btn btn-success"  routerLink="/ngx-editor" [disabled]="isEnabled">
-      Ngx-Editor&nbsp;<i class="fa fa-arrow-right fa-lg" aria-hidden="true"></i></button>
+    <button type="button" class="btn btn-success"  routerLink="/home" [disabled]="isEnabled">
+      home&nbsp;<i class="fa fa-home fa-lg" aria-hidden="true"></i></button>
   </div>
 
 </section>
 
 <div class="container" *ngIf="true">
   <div class="form-group">
-    <textarea class="form-control" id="Textarea1" rows="1" style="resize: none;"
+    <textarea class="form-control" [placeholder]="'Enter title here...'" id="Textarea1" rows="1" style="resize: none;"
       [(ngModel)]="escritoTexto_Titulo"></textarea>
   </div>
-  <div class="form-group">
-    <textarea class="form-control" id="Textarea2" rows="13" style="resize: none;"
+  <!-- <div class="form-group">
+    <textarea class="form-control" [placeholder]="'Enter text here...'" id="Textarea2" rows="13" style="resize: none;"
       [(ngModel)]="escritoTexto_Texto"></textarea>
+  </div> -->
+
+  <div class="ngx-editor-container">
+    <app-ngx-editor [config]="editorConfig" [(ngModel)]="escritoTexto_Texto"></app-ngx-editor>
   </div>
+
 </div>
 
 <br>
