--- a/EditoresDeTexto/src/app/home/home.component.html
+++ b/EditoresDeTexto/src/app/home/home.component.html
@@ -13,6 +13,10 @@
       <button type="button" class="btn btn-success" routerLink="/quill" [disabled]="isEnabled">
         Quill&nbsp;<i class="fa fa-arrow-right fa-lg" aria-hidden="true"></i></button>
     </div>
+    <div>
+      <button type="button" class="btn btn-success" routerLink="/ckeditor" [disabled]="isEnabled">
+        CKEditor&nbsp;<i class="fa fa-arrow-right fa-lg" aria-hidden="true"></i></button>
+    </div>
   </div>
 
 </section>
