--- a/EditoresDeTexto/src/app/editor-ckeditor4/editor-ckeditor4.component.html
+++ b/EditoresDeTexto/src/app/editor-ckeditor4/editor-ckeditor4.component.html
@@ -9,7 +9,7 @@
   </div> -->
 
   <div>
-    <button type="button" class="btn btn-success"  routerLink="/home" [disabled]="isEnabled">
+    <button type="button" class="btn btn-success" routerLink="/home" [disabled]="isEnabled">
       home&nbsp;<i class="fa fa-home fa-lg" aria-hidden="true"></i></button>
   </div>
 
@@ -20,19 +20,23 @@
     <textarea class="form-control" [placeholder]="'Enter title here...'" id="Textarea1" rows="1" style="resize: none;"
       [(ngModel)]="escritoTexto_Titulo"></textarea>
   </div>
-  <!-- <div class="form-group">
-    <textarea class="form-control" [placeholder]="'Enter text here...'" id="Textarea2" rows="13" style="resize: none;"
-      [(ngModel)]="escritoTexto_Texto"></textarea>
-  </div> -->
+
 
   <div class="ngx-editor-container">
-    <!-- <app-ngx-editor [config]="editorConfig" [(ngModel)]="escritoTexto_Texto"></app-ngx-editor> -->
-    <ckeditor [(ngModel)]="ckeditorContent"></ckeditor>
+    <!-- <ckeditor [(ngModel)]="escritoTexto_Titulo" [config]="{ toolbar: [ [ 'Bold' ] ] }"></ckeditor> -->
+    <ckeditor [(ngModel)]="escritoTexto_Titulo"
+    [config]="{ toolbar: [ [ 'Bold',
+    'Italic',
+    'Underline',
+    'Strike',
+    'RemoveFormat' ] ]}">
+    </ckeditor>
   </div>
 
 </div>
 
 <br>
+
 {{ ckeditorContent }}
 <div class="container">
   <div class="text-center">
