--- a/EditoresDeTexto/src/app/editor-ckeditor4/editor-ckeditor4.component.html
+++ b/EditoresDeTexto/src/app/editor-ckeditor4/editor-ckeditor4.component.html
@@ -25,11 +25,19 @@
   <div class="ngx-editor-container">
     <!-- <ckeditor [(ngModel)]="escritoTexto_Titulo" [config]="{ toolbar: [ [ 'Bold' ] ] }"></ckeditor> -->
     <ckeditor [(ngModel)]="escritoTexto_Titulo"
-    [config]="{ toolbar: [ [ 'Bold',
-    'Italic',
-    'Underline',
-    'Strike',
-    'RemoveFormat' ] ]}">
+    [config]="
+    {toolbar: [
+      { name: 'clipboard', items: [ 'Cut', 'Copy', 'Paste', 'PasteText', 'PasteFromWord', '-', 'Undo', 'Redo' ] },
+      { name: 'insert', items: [ 'Table',  'Maximize'  ] },
+      { name: 'document', items: [ 'Source', '-', 'Save', 'Print' ] },
+      { name: 'editing', items: [ 'Find', 'Replace', 'Scayt' ] },
+      '/',
+      { name: 'basicstyles', items: [ 'Bold', 'Italic', 'Underline', 'Strike', '-', 'RemoveFormat' ] },
+      { name: 'paragraph', items: [ 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'Blockquote', 'JustifyLeft', 'JustifyCenter', 'JustifyRight', 'JustifyBlock' ] },
+      { name: 'styles', items: [ 'Format', 'Font', 'FontSize' ] },
+      { name: 'colors', items: [ 'TextColor', 'BGColor' ] }
+
+    ]}">
     </ckeditor>
   </div>
 
@@ -41,6 +49,6 @@
 <div class="container">
   <div class="text-center">
     <button type="button" class="btn btn-primary waves-effect waves-light" (click)='Guardar()'><i
-        class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp;Gueardar escrito</button>
+        class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp;Guardar escrito</button>
   </div>
 </div>
