--- a/EditoresDeTexto/src/app/editor-ckeditor4/editor-ckeditor4.component.html
+++ b/EditoresDeTexto/src/app/editor-ckeditor4/editor-ckeditor4.component.html
@@ -2,45 +2,51 @@
   <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
 
-<section class="ss-style-triangles">
+<nav class="ss-style-triangles">
   <div>
     <button type="button" class="btn btn-success" routerLink="/home" [disabled]="isEnabled">
       home&nbsp;<i class="fa fa-home fa-lg" aria-hidden="true"></i></button>
   </div>
+</nav>
+
+<section>
+  <div class="row">
+    <div class="col-7 col-lg-8">
+      <article *ngIf="!showPreview">
+        <textarea class="form-control" [placeholder]="'Enter title here...'" id="Textarea1" rows="1"
+          style="resize: none;" [(ngModel)]="escritoTexto_Titulo"></textarea>
+        <br>
+        <ckeditor [(ngModel)]="escritoTexto_Texto" ></ckeditor>
+      </article>
+
+      <article *ngIf="showPreview">
+        <textarea class="form-control textPreview" [(ngModel)]="textPreview" readonly></textarea>
+      </article>
+
+    </div>
+    <div class="col-5 col-lg-4">
+      <aside>
+        <button type="button" class="btn btn-primary waves-effect waves-light" (click)='Guardar()'><i
+            class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp;Guardar escrito</button>
+            <br>
+        <button type="button" class="btn btn-danger waves-effect waves-light" (click)='preview()' [disabled]="isEnabled"><i
+            class="fa fa-eye fa-fw" aria-hidden="true" ></i>&nbsp;Vista HTML</button>
+      </aside>
+    </div>
+  </div>
+
+  <!-- <ckeditor [(ngModel)]="escritoTexto_Texto"
+  [config]="
+  {toolbar: [
+    { name: 'clipboard', items: [ 'Cut', 'Copy', 'Paste', 'PasteText', 'PasteFromWord', '-', 'Undo', 'Redo' ] },
+    { name: 'insert', items: [ 'Table',  'Maximize'  ] },
+    { name: 'document', items: [ 'Source', '-', 'Save', 'Print' ] },
+    { name: 'editing', items: [ 'Find', 'Replace', 'Scayt' ] },
+    '/',
+    { name: 'basicstyles', items: [ 'Bold', 'Italic', 'Underline', 'Strike', '-', 'RemoveFormat' ] },
+    { name: 'paragraph', items: [ 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'Blockquote', 'JustifyLeft', 'JustifyCenter', 'JustifyRight', 'JustifyBlock' ] },
+    { name: 'styles', items: [ 'Format', 'Font', 'FontSize' ] },
+    { name: 'colors', items: [ 'TextColor', 'BGColor' ] }
+  ]}">
+  </ckeditor> -->
 </section>
-
-<div class="container" *ngIf="true">
-  <div class="form-group">
-    <textarea class="form-control" [placeholder]="'Enter title here...'" id="Textarea1" rows="1" style="resize: none;"
-      [(ngModel)]="escritoTexto_Titulo"></textarea>
-  </div>
-
-
-  <div class="ngx-editor-container">
-    <ckeditor [(ngModel)]="escritoTexto_Texto"></ckeditor>
-    <!-- <ckeditor [(ngModel)]="escritoTexto_Texto"
-    [config]="
-    {toolbar: [
-      { name: 'clipboard', items: [ 'Cut', 'Copy', 'Paste', 'PasteText', 'PasteFromWord', '-', 'Undo', 'Redo' ] },
-      { name: 'insert', items: [ 'Table',  'Maximize'  ] },
-      { name: 'document', items: [ 'Source', '-', 'Save', 'Print' ] },
-      { name: 'editing', items: [ 'Find', 'Replace', 'Scayt' ] },
-      '/',
-      { name: 'basicstyles', items: [ 'Bold', 'Italic', 'Underline', 'Strike', '-', 'RemoveFormat' ] },
-      { name: 'paragraph', items: [ 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'Blockquote', 'JustifyLeft', 'JustifyCenter', 'JustifyRight', 'JustifyBlock' ] },
-      { name: 'styles', items: [ 'Format', 'Font', 'FontSize' ] },
-      { name: 'colors', items: [ 'TextColor', 'BGColor' ] }
-    ]}">
-    </ckeditor> -->
-  </div>
-</div>
-
-<br>
-
-{{ escritoTexto_Texto }}
-<div class="container">
-  <div class="text-center">
-    <button type="button" class="btn btn-primary waves-effect waves-light" (click)='Guardar()'><i
-        class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp;Guardar escrito</button>
-  </div>
-</div>
