--- a/EditoresDeTexto/src/app/editor-ngx-quill/editor-ngx-quill.component.html
+++ b/EditoresDeTexto/src/app/editor-ngx-quill/editor-ngx-quill.component.html
@@ -2,29 +2,38 @@
   <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
 
-<section class="ss-style-triangles">
+<nav class="ss-style-triangles">
   <div>
-    <button type="button" class="btn btn-success"  routerLink="/home" [disabled]="isEnabled">
+    <button type="button" class="btn btn-success" routerLink="/home" [disabled]="isEnabled">
       home&nbsp;<i class="fa fa-home fa-lg" aria-hidden="true"></i></button>
   </div>
+</nav>
+
+<section>
+  <div class="row">
+    <div class="col-7 col-lg-8">
+      <article *ngIf="!showPreview">
+        <textarea class="form-control" [placeholder]="'Enter title here...'" id="Textarea1" rows="1"
+          style="resize: none;" [(ngModel)]="escritoTexto_Titulo"></textarea>
+        <br>
+        <div class="ngx-editor-container">
+          <quill-editor [(ngModel)]="escritoTexto_Texto" [styles]="editorStyle" [modules]="config"></quill-editor>
+        </div>
+      </article>
+
+      <article *ngIf="showPreview">
+        <textarea class="form-control textPreview" [(ngModel)]="textPreview" readonly></textarea>
+      </article>
+
+    </div>
+    <div class="col-5 col-lg-4">
+      <aside>
+        <button type="button" class="btn btn-primary waves-effect waves-light" (click)='Guardar()'><i
+            class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp;Guardar escrito</button>
+        <br>
+        <button type="button" class="btn btn-danger waves-effect waves-light" (click)='preview()'
+          [disabled]="isEnabled"><i class="fa fa-eye fa-fw" aria-hidden="true"></i>&nbsp;Vista HTML</button>
+      </aside>
+    </div>
+  </div>
 </section>
-
-<div class="container" *ngIf="true">
-  <div class="form-group">
-    <textarea class="form-control" [placeholder]="'Enter title here...'" id="Textarea1" rows="1" style="resize: none;"
-      [(ngModel)]="escritoTexto_Titulo"></textarea>
-  </div>
-
-  <div class="ngx-editor-container">
-    <quill-editor [(ngModel)]="escritoTexto_Texto" [styles]="editorStyle" [modules]="config"></quill-editor>
-  </div>
-</div>
-
-<br>
-
-<div class="container">
-  <div class="text-center">
-    <button type="button" class="btn btn-primary waves-effect waves-light" (click)='Guardar()'><i
-        class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp;Guardar escrito</button>
-  </div>
-</div>
