Correccion de errores (Cors)

--- a/ApiFronted/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/ApiFronted/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using ApiFronted.Areas.HelpPage.Models
+@using ApiFrontend.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
