--- a/ApiFronted/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/ApiFronted/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using ApiFronted.Areas.HelpPage.Models
-@using ApiFronted.Areas.HelpPage.ModelDescriptions
+@using ApiFrontend.Areas.HelpPage.Models
+@using ApiFrontend.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
