--- a/ApiFronted/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/ApiFronted/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using ApiFronted.Areas.HelpPage
+@using ApiFrontend.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
