--- a/ApiFronted/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
+++ b/ApiFronted/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
@@ -1,4 +1,4 @@
-@using ApiFronted.Areas.HelpPage.ModelDescriptions
+@using ApiFrontend.Areas.HelpPage.ModelDescriptions
 @model Type
 @{
     ModelDescription modelDescription = ViewBag.modelDescription;
