--- a/ApiFronted/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/ApiFronted/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using ApiFronted.Areas.HelpPage.Models
+@using ApiFrontend.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
