--- a/ApiFronted/Views/Shared/_Layout.cshtml
+++ b/ApiFronted/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @using ApiFronted.Extensions;
+                    @using ApiFrontend.Extensions;
                     @if (Html.IsReleaseDebug())
                     {
                         <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
